argo/argo-stack.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: argocd.34.123.11.248.xip.io
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
        path: /
  tls:
  - hosts:
    - argocd.34.123.11.248.xip.io
    secretName: argocd-secret

---
#grafana
#u: https://grafana.34.123.11.248.xip.io/
#u: admin
#p: Qq121314
#for loki demo {job="argocd/tikal"} !="kube-probe"

#argo
#u: https://argocd.34.123.11.248.xip.io/
#u: admin
#p: Qq121314

#Hello world grafana presentation
#u: https://34.123.11.248.xip.io/
